--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>NFT Preview Card Component</title>
-</head>
-<body>
-  <main>
-    <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>NFT Preview Card Component</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div class="hero-image">
+          <img class="ether" src="./images/image-equilibrium.jpg" />
+        </div>
 
-      <img class="ether" src="./images/image-equilibrium.jpg"/>
+        <h1>Equilibrium #3429</h1>
 
-      <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
 
-      <p>Our Equilibrium collection promotes balance and calm.</p>
+        <div class="balance">
+          <div class="eth">
+            <img src="./images/icon-ethereum.svg" alt="Ether" />
+            <span>0.041 ETH</span>
+          </div>
 
-      <div class="balance">
-        <div class="eth">
-          <img src="./images/icon-ethereum.svg" alt="Ether"/> 
-          <small>0.041 ETH</small>
-        </div> 
+          <div class="days">
+            <img src="./images/icon-clock.svg" alt="clock" />
+            <span>3 days left</span>
+          </div>
+        </div>
 
-       <div class="days"><img src="./images/icon-clock.svg" alt="clock"/> <span>3 days left</span></div>
+        <div class="hr"></div>
+
+        <p class="text-mute">
+          <img
+            class="avatar"
+            src="./images/image-avatar.png"
+            alt="avatar"
+          />Creation of <span>Darlene Adusei</span>
+        </p>
       </div>
-
-      <div class="hr"></div>
-
-      <p class="text-mute"><img class="avatar" src="./images/image-avatar.png" alt="avatar"/>Creation of <span>Darlene Adusei</span></p>
-
-    </div>
-  </main>
-</body>
+    </main>
+  </body>
 </html>
