--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <div class="container">
         <div class="hero-image">
-          <img class="ether" src="./images/image-equilibrium.jpg" />
+          <div><img class="ether" src="./images/image-equilibrium.jpg" /></div>
         </div>
 
         <h1>Equilibrium #3429</h1>
@@ -37,13 +37,12 @@
 
         <div class="hr"></div>
 
-        <p class="text-mute">
-          <img
-            class="avatar"
-            src="./images/image-avatar.png"
-            alt="avatar"
-          />Creation of <span>Darlene Adusei</span>
-        </p>
+        <div class="text-mute">
+          <div>
+            <img class="avatar" src="./images/image-avatar.png" alt="avatar" />
+          </div>
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </div>
       </div>
     </main>
   </body>
