--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>NFT Preview Card Component</title>
+    <title>NFT Preview Card</title>
   </head>
   <body>
     <main>
